# NextApp

./: README.md  gitignore.txt  main.py  pyproject.toml
app/: config.py
app/components/: alerts.py  buttons.py  map.py  vehicle_card.py
app/layout/: __init__.py  appbar.py  drawer.py  navbar.py
app/services/: api.py  auth.py  locations.py  vehicles.py
app/state/: app_state.py
app/views/: __init__.py  dashboard.py  home.py  login.py  settings.py  splash.py  vehicles.py  welcome.py
